--- a/文本处理器/文本处理器.csproj
+++ b/文本处理器/文本处理器.csproj
@@ -57,11 +57,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repeat_Form.cs">
+    <Compile Include="Option_Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Repeat_Form.Designer.cs">
-      <DependentUpon>Repeat_Form.cs</DependentUpon>
+    <Compile Include="Option_Form.Designer.cs">
+      <DependentUpon>Option_Form.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -76,8 +76,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Repeat_Form.resx">
-      <DependentUpon>Repeat_Form.cs</DependentUpon>
+    <EmbeddedResource Include="Option_Form.resx">
+      <DependentUpon>Option_Form.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
