--- a/文本处理器/文本处理器.csproj
+++ b/文本处理器/文本处理器.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Option_Form.Designer.cs">
       <DependentUpon>Option_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Set_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Set_Form.Designer.cs">
+      <DependentUpon>Set_Form.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +84,9 @@
     </Compile>
     <EmbeddedResource Include="Option_Form.resx">
       <DependentUpon>Option_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Set_Form.resx">
+      <DependentUpon>Set_Form.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
